--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-share": "^12.2.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "xlsx": "^0.18.5"
   },
